fixed some changes.

--- a/app/src/main/res/layout/activity_section_g_form3.xml
+++ b/app/src/main/res/layout/activity_section_g_form3.xml
@@ -258,7 +258,7 @@
                                 app:maxValue="20"
                                 app:minValue="1"
                                 app:type="range"
-                                android:text='@{kf3g062a.checked ? kf3g062x.getText().toString() : "" }'
+                                android:text='@{kf3g062a.checked ? kf3g062x.getText().toString : "" }'
                                 android:visibility='@{kf3g062a.checked ? View.VISIBLE : View.GONE }' />
 
                         </RadioGroup>
@@ -295,7 +295,7 @@
                                 app:maxValue="20"
                                 app:minValue="1"
                                 app:type="range"
-                                android:text='@{kf3g063a.checked ? kf3g063x.getText().toString() : "" }'
+                                android:text='@{kf3g063a.checked ? kf3g063x.getText().toString : "" }'
                                 android:visibility='@{kf3g063a.checked ? View.VISIBLE : View.GONE }' />
 
                         </RadioGroup>
@@ -382,7 +382,7 @@
                                 app:maxValue="20"
                                 app:minValue="1"
                                 app:type="range"
-                                android:text='@{kf3g066a.checked ? kf3g066x.getText().toString() : "" }'
+                                android:text='@{kf3g066a.checked ? kf3g066x.getText().toString : "" }'
                                 android:visibility='@{kf3g066a.checked ? View.VISIBLE : View.GONE }' />
 
                         </RadioGroup>
@@ -966,7 +966,7 @@
                             android:id="@+id/kf3g09"
                             style="@style/EditText_number"
                             android:enabled="@{kf3g09a.checked ? false : true}"
-                            android:text='@{kf3g09a.checked ? "" : kf3g09.getText().toString()}'
+                            android:text='@{kf3g09a.checked ? "" : kf3g09.getText().toString}'
                             android:hint="@string/kf3g09"
                             android:maxLength="2"
                             app:maxValue="23"
@@ -1064,7 +1064,7 @@
                                     style="@style/EditText"
                                     android:hint="@string/other"
                                     android:tag="kf3g1196"
-                                    android:text='@{kf3g1196.checked ? kf3g1196x.getText().toString() : "" }'
+                                    android:text='@{kf3g1196.checked ? kf3g1196x.getText().toString : "" }'
                                     android:visibility='@{kf3g1196.checked ? View.VISIBLE : View.GONE }' />
 
                             </RadioGroup>
@@ -1113,7 +1113,7 @@
                                     style="@style/EditText"
                                     android:hint="@string/other"
                                     android:tag="kf3g1296"
-                                    android:text='@{kf3g1296.checked ? kf3g1296x.getText().toString() : "" }'
+                                    android:text='@{kf3g1296.checked ? kf3g1296x.getText().toString : "" }'
                                     android:visibility='@{kf3g1296.checked ? View.VISIBLE : View.GONE }' />
 
                             </RadioGroup>
