--- a/app/src/main/res/layout/activity_section_b_form3.xml
+++ b/app/src/main/res/layout/activity_section_b_form3.xml
@@ -263,7 +263,7 @@
                                         style="@style/EditTextNum"
                                         android:layout_width="0dp"
                                         android:layout_weight="1"
-                                        android:hint="@string/hours"
+                                        android:hint="##"
                                         android:maxLength="2"
                                         app:maxValue="23"
                                         app:minValue="0"
@@ -280,7 +280,7 @@
                                         style="@style/EditTextNum"
                                         android:layout_width="0dp"
                                         android:layout_weight="1"
-                                        android:hint="@string/days"
+                                        android:hint="##"
                                         android:maxLength="2"
                                         app:maxValue="31"
                                         app:minValue="0"
