--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,6 +44,15 @@
         <item name="android:paddingBottom">5sp</item>
     </style>
 
+    <style name="i_scrollviews">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">2dp</item>
+        <item name="android:padding">2dp</item>
+        <item name="android:fadeScrollbars">false</item>
+        <item name="android:layoutDirection">rtl</item>
+    </style>
+
     <!-- Irfan Textview  -->
     <style name="i_textview">
         <item name="android:layout_width">match_parent</item>
@@ -249,7 +258,39 @@
         <item name="cardCornerRadius">7dp</item>
         <item name="cardElevation">3dp</item>
     </style>
+
+    <!--Card View Start-->
+    <style name="cardViews">
+        <item name="android:background">@color/white</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="cardCornerRadius">7dp</item>
+        <item name="cardElevation">1dp</item>
+    </style>
     <!--Card View End-->
+
+
+    <style name="radiogroups">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">left</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:background">#d6d6d6</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:typeface">serif</item>
+    </style>
+
+    <style name="radiobuttons" parent="Widget.AppCompat.CompoundButton.RadioButton">
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/white</item>
+        <!--        <item name="android:button">@color/colorPrimary</item>-->
+        <item name="android:elevation">1dp</item>
+        <item name="android:layout_marginBottom">1dp</item>
+        <item name="android:padding">15dp</item>
+    </style>
 
     <style name="radiobutton" parent="Widget.AppCompat.CompoundButton.RadioButton">
         <item name="android:layout_width">match_parent</item>
