--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,6 +64,16 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="i_textviewh">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+        <item name="android:background">@android:color/white</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
     <!-- SAJID Textview  -->
     <style name="textviews">
         <item name="android:layout_width">match_parent</item>
