--- a/app/src/main/res/layout/activity_section_a1.xml
+++ b/app/src/main/res/layout/activity_section_a1.xml
@@ -16,7 +16,7 @@
     <ScrollView
         style="@style/i_scrollview"
         android:layoutDirection="rtl"
-        android:textDirection="rtl">>
+        android:textDirection="rtl">
 
         <LinearLayout
             android:layout_width="match_parent"
