--- a/app/src/main/res/layout/activity_section_a_form0.xml
+++ b/app/src/main/res/layout/activity_section_a_form0.xml
@@ -2,13 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layoutDirection="rtl"
     tools:context=".ui.form0.SectionAForm0Activity">
 
     <data>
 
         <import type="android.view.View" />
-
 
         <variable
             name="callback"
@@ -16,8 +14,9 @@
     </data>
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        style="@style/i_scrollview"
+        android:layoutDirection="rtl"
+        android:textDirection="rtl">
 
         <LinearLayout
             android:id="@+id/form0Layout"
@@ -25,42 +24,83 @@
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true"
             android:focusableInTouchMode="true"
-            android:layoutDirection="rtl"
             android:orientation="vertical">
 
 
-            <TextView
-                style="@style/i_textview"
-                android:text="@string/crataluka" />
+            <!--  Taluka Spinner -->
+            <android.support.v7.widget.CardView
+                android:id="@+id/cvcrataluka"
+                style="@style/cardView">
 
-            <Spinner
-                android:id="@+id/crataluka"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp" />
+                <LinearLayout style="@style/hlinearlayout">
 
-            <TextView
-                style="@style/i_textview"
-                android:text="@string/cruc" />
+                    <TextView
+                        style="@style/textviews"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:text="@string/crataluka" />
 
-            <Spinner
-                android:id="@+id/crauc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp" />
+                    <Spinner
+                        android:id="@+id/crataluka"
+                        style="@style/spinner"
+                        android:layout_width="0dp"
+                        android:layout_weight="1" />
 
-            <TextView
-                style="@style/i_textview"
-                android:text="@string/crvillage" />
+                </LinearLayout>
 
-            <Spinner
-                android:id="@+id/crvillage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="20dp" />
+            </android.support.v7.widget.CardView>
+
+            <!--  Union Council UC Spinner -->
+            <android.support.v7.widget.CardView
+                android:id="@+id/cvcrauc"
+                style="@style/cardView">
+
+                <LinearLayout style="@style/hlinearlayout">
+
+                    <TextView
+                        style="@style/i_textview"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:text="@string/cruc" />
+
+                    <Spinner
+                        android:id="@+id/crauc"
+                        style="@style/spinner"
+                        android:layout_width="0dp"
+                        android:layout_weight="1" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <!--  Village Spinner  -->
+            <android.support.v7.widget.CardView
+                android:id="@+id/cvcrvillage"
+                style="@style/cardView">
+
+                <LinearLayout style="@style/hlinearlayout">
+
+                    <TextView
+                        style="@style/i_textview"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:text="@string/crvillage" />
+
+                    <Spinner
+                        android:id="@+id/crvillage"
+                        style="@style/spinner"
+                        android:layout_width="0dp"
+                        android:layout_weight="1" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
 
             <!--Village code label-->
-            <android.support.v7.widget.CardView style="@style/cardView">
+            <android.support.v7.widget.CardView
+                android:id="@+id/cvvillageLabel"
+                style="@style/cardView">
 
                 <LinearLayout style="@style/linearlayout_view">
 
@@ -73,84 +113,96 @@
 
             </android.support.v7.widget.CardView>
 
+
             <!--surveillance-->
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:id="@+id/checkBtnLayout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-                android:orientation="horizontal"
+                style="@style/cardView"
                 android:visibility="gone"
                 tools:visibility="visible">
 
-                <EditText
-                    android:id="@+id/kapr02a"
-                    style="@style/textInput"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="@string/kapr01"
-                    android:inputType="number"
-                    android:maxLength="3" />
+                <LinearLayout style="@style/hlinearlayout">
 
-                <Button
-                    android:id="@+id/btnSearch"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/holo_red_light"
-                    android:onClick='@{() -> callback.BtnSearchWoman()}'
-                    android:text="CHECK"
-                    android:textColor="@color/white" />
+                    <EditText
+                        android:id="@+id/kapr02a"
+                        style="@style/EditTextNum"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:hint="@string/kapr01"
+                        android:maxLength="3" />
 
-            </LinearLayout>
+                    <Button
+                        android:id="@+id/btnSearch"
+                        style="@style/button"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/button_bg"
+                        android:onClick='@{() -> callback.BtnSearchWoman()}'
+                        android:text="CHECK"
+                        android:textColor="@color/colorPrimaryDark" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
 
             <!--recruitment-->
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:id="@+id/hhLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
+                style="@style/cardView"
                 android:visibility="gone"
                 tools:visibility="visible">
 
-                <TextView
-                    style="@style/i_textview"
-                    android:text="@string/kapr01" />
+                <LinearLayout style="@style/hlinearlayout">
 
-                <com.edittextpicker.aliazaz.EditTextPicker
-                    android:id="@+id/kapr02b"
-                    style="@style/EditText_number"
-                    android:hint="XXX"
-                    android:maxLength="3"
-                    app:maxValue="999"
-                    app:minValue="1"
-                    app:pattern="[0-9]{3,3}"
-                    app:type="range" />
+                    <TextView
+                        style="@style/i_textview"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:text="@string/kapr01" />
 
-            </LinearLayout>
+                    <com.edittextpicker.aliazaz.EditTextPicker
+                        android:id="@+id/kapr02b"
+                        style="@style/EditTextNum"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:hint="XXX"
+                        android:maxLength="3"
+                        app:maxValue="999"
+                        app:minValue="1"
+                        app:pattern="[0-9]{3,3}"
+                        app:type="range" />
 
-            <LinearLayout
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+
+            <!--W-NAME-->
+            <android.support.v7.widget.CardView
                 android:id="@+id/hhLayout2"
-                style="@style/linearlayout_view_wt_bound"
+                style="@style/cardView"
                 android:visibility="gone"
                 tools:visibility="visible">
 
-                <!--W-NAME-->
-                <TextView
-                    style="@style/i_textview"
-                    android:text="@string/kapr03" />
+                <LinearLayout style="@style/hlinearlayout">
 
-                <EditText
-                    android:id="@+id/kapr03"
-                    style="@style/textInput"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
-                    android:hint="@string/kapr03"
-                    android:inputType="text" />
+                    <TextView
+                        style="@style/i_textview"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:text="@string/kapr03" />
 
-            </LinearLayout>
+                    <EditText
+                        android:id="@+id/kapr03"
+                        style="@style/EditTextAlpha"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:hint="@string/name" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
 
             <LinearLayout
                 android:id="@+id/fldGrpcra04"
@@ -271,6 +323,7 @@
                         app:maxValue="50"
                         app:minValue="2"
                         app:type="range" />
+
                 </LinearLayout>
 
                 <TextView
