--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,11 +78,16 @@
     <style name="textviews">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_gravity">center_vertical</item>
         <item name="android:background">@color/colorPrimary</item>
+        <!--        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>-->
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">20sp</item>
+        <item name="android:drawable">@drawable/textview_background_grad1</item>
+        <item name="android:typeface">sans</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:elevation">1dp</item>
     </style>
 
     <style name="textview_heading">
