--- a/app/src/main/res/layout/activity_section_b_form3.xml
+++ b/app/src/main/res/layout/activity_section_b_form3.xml
@@ -29,26 +29,33 @@
                     <LinearLayout style="@style/linearlayout_view">
 
                         <TextView
-                            style="@style/i_textview"
+                            style="@style/textviews"
                             android:text="@string/kf3b02" />
 
                         <RadioGroup
                             android:id="@+id/kf3b02"
-                            style="@style/i_radiogroup">
+                            style="@style/i_radiogroup"
+                            android:orientation="horizontal">
 
                             <RadioButton
                                 android:id="@+id/kf3b02a"
                                 style="@style/i_radiobutton"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:text="@string/kf3b02a" />
 
                             <RadioButton
                                 android:id="@+id/kf3b02b"
                                 style="@style/i_radiobutton"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:text="@string/kf3b02b" />
 
                             <RadioButton
                                 android:id="@+id/kf3b02c"
                                 style="@style/i_radiobutton"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:text="@string/kf3b02c" />
 
                         </RadioGroup>
@@ -72,26 +79,26 @@
                         <LinearLayout style="@style/linearlayout_view">
 
                             <TextView
-                                style="@style/i_textview"
+                                style="@style/textviews"
                                 android:text="@string/kf3b03" />
 
                             <RadioGroup
                                 android:id="@+id/kf3b03"
-                                style="@style/i_radiogroup">
+                                style="@style/radiogroups">
 
                                 <RadioButton
                                     android:id="@+id/kf3b03a"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/kf3b03a" />
 
                                 <RadioButton
                                     android:id="@+id/kf3b03b"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/kf3b03b" />
 
                                 <RadioButton
                                     android:id="@+id/kf3b03c"
-                                    style="@style/i_radiobutton"
+                                    style="@style/radiobuttons"
                                     android:text="@string/kf3b03c" />
 
                             </RadioGroup>
@@ -107,6 +114,7 @@
                         android:orientation="vertical"
                         android:visibility='@{kf3b03c.checked? View.VISIBLE : View.GONE}'>
 
+
                         <!-- kf3b04-->
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkf3b04"
@@ -115,7 +123,7 @@
                             <LinearLayout style="@style/linearlayout_view">
 
                                 <TextView
-                                    style="@style/i_textview"
+                                    style="@style/textviews"
                                     android:text="@string/kf3b04" />
 
                                 <LinearLayout
@@ -165,7 +173,7 @@
 
                                     <EditText
                                         android:id="@+id/kf3b0496x"
-                                        style="@style/EditText"
+                                        style="@style/EditTextAlpha"
                                         android:hint="@string/specify"
                                         android:tag="kf3b0496"
                                         android:text='@{kf3b0496.checked ? kf3b0496x.getText().toString : "" }'
@@ -183,6 +191,7 @@
 
                         </android.support.v7.widget.CardView>
 
+
                         <!-- kf3b05-->
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkf3b05"
@@ -191,43 +200,42 @@
                             <LinearLayout style="@style/linearlayout_view">
 
                                 <TextView
-                                    style="@style/i_textview"
+                                    style="@style/textviews"
                                     android:text="@string/kf3b05" />
 
                                 <RadioGroup
                                     android:id="@+id/kf3b05"
-                                    style="@style/i_radiogroup">
+                                    style="@style/radiogroups">
 
                                     <RadioButton
                                         android:id="@+id/kf3b05a"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/kf3b05a" />
 
                                     <RadioButton
                                         android:id="@+id/kf3b05b"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/kf3b05b" />
 
                                     <RadioButton
                                         android:id="@+id/kf3b05c"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/kf3b05c" />
 
                                     <RadioButton
                                         android:id="@+id/kf3b05d"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/kf3b05d" />
 
                                     <RadioButton
                                         android:id="@+id/kf3b0596"
-                                        style="@style/i_radiobutton"
+                                        style="@style/radiobuttons"
                                         android:text="@string/other" />
 
                                     <EditText
                                         android:id="@+id/kf3b0596x"
-                                        style="@style/EditText"
+                                        style="@style/EditTextAlpha"
                                         android:hint="@string/specify"
-                                        android:tag="kf3b0596"
                                         android:text='@{kf3b0596.checked ? kf3b0596x.getText().toString : "" }'
                                         android:visibility='@{kf3b0596.checked ? View.VISIBLE : View.GONE }' />
 
@@ -237,6 +245,7 @@
 
                         </android.support.v7.widget.CardView>
 
+
                         <!-- kf3b06-->
                         <android.support.v7.widget.CardView
                             android:id="@+id/fldGrpCVkf3b06"
@@ -245,7 +254,7 @@
                             <LinearLayout style="@style/linearlayout_view">
 
                                 <TextView
-                                    style="@style/i_textview"
+                                    style="@style/textviews"
                                     android:text="@string/kf3b06" />
 
                                 <LinearLayout
@@ -291,6 +300,7 @@
                             </LinearLayout>
 
                         </android.support.v7.widget.CardView>
+
 
                     </LinearLayout>
 
